--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
@@ -18,6 +18,9 @@
 	/*overflow: auto;*/
 }
 
+
+/* <single, double + triple height> */
+
 .sDashboard li {
 	margin: 3px 3px 3px 0;
 	padding: 1px;
@@ -25,6 +28,35 @@
 	height: 223px !important;
 	width: 400px !important;
 }
+.sDashboardWidgetContent {
+	margin: 0.3em;
+	padding: 0.4em;
+    padding-top: 20px;
+	height: 160px;
+	overflow-x: hidden;
+	overflow-y: hidden;
+}
+
+.sDashboard li.height2 {
+	height: 446px !important;
+}
+.sDashboardWidgetContent.height2 {
+	height: 391px !important;
+}
+
+.sDashboard li.height3 {
+	height: 669px !important;
+}
+.sDashboardWidgetContent.height3 {
+	height: 622px !important;
+}
+
+.sDashboardWidget.height2 {
+}
+
+/* </single, double + triple height> */
+
+
 .sDashboardWidgetContentBusyHint 
  {
     border: 0;
@@ -62,14 +94,6 @@
 }
 
 /*dashboard widget content css*/
-.sDashboardWidgetContent {
-	margin: 0.3em;
-	padding: 0.4em;
-    padding-top: 20px;
-	height: 160px;
-	overflow-x: hidden;
-	overflow-y: hidden;
-}
 
 .sDashboardWidgetContentMaximized {
 	margin: 0.3em;
@@ -126,7 +150,7 @@
 	/*	width: 200px;
 	 height: 180px;*/
 	width: 100%;
-	height: 95%;
+	height: 100%;
 	/*	cursor: pointer;*/
 }
 
@@ -228,13 +252,6 @@ li.ui-sortable-placeholder {
 	width: 100%;
 	z-index: 9998;/*z-index one less than window maximized css*/
 }
-/*.sDashboard-overlay {
- width: 100%;
- height: 100%;
- background: rgba(0, 0, 0, 0.1);
- background-size: 100% 100%;
- position: fixed;
- }*/
  
  .sDashboard-icon.sDashboard-circle-plus-icon, .sDashboard-icon.sDashboard-refresh-icon {
      display: none;
