--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Content/Dashboard/sDashboard.css
@@ -43,12 +43,17 @@
 .sDashboardWidgetContent.height2 {
 	height: 391px !important;
 }
-
+.sDashboardWidgetContentBusyHint.height2 {
+    height: 350px !important;
+}
 .sDashboard li.height3 {
 	height: 669px !important;
 }
 .sDashboardWidgetContent.height3 {
 	height: 622px !important;
+}
+.sDashboardWidgetContentBusyHint.height3 {
+    height: 560px !important;
 }
 
 .sDashboardWidget.height2 {
