--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/AppFavoriteButtons.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/AppFavoriteButtons.cshtml
@@ -1,5 +1,15 @@
 ﻿@using CkgDomainLogic.General.Contracts
-@{ var logonContext = (ILogonContextDataService)SessionHelper.GetSessionObject("LogonContext"); }
+@{
+    var logonContext = (ILogonContextDataService)SessionHelper.GetSessionObject("LogonContext");
+    bool isDashBoard = ViewBag.IsDashboard ?? false;
+}
+
+@if (isDashBoard)
+{
+    <style type="text/css">
+        
+    </style>
+}
 
 <h4 class="margin-top-30 margin-bottom-25">
         
