--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/AppFavoriteButtons.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/AppFavoriteButtons.cshtml
@@ -34,7 +34,7 @@
     
     <div class="alert alert-success app-favorite-on-homepage-edit-mode-hint">
         <i class="icon-info-sign"></i> 
-        <span>
+        <div>
             Sie befinden sich nun Bearbeitungs-Modus für Ihre Homepage Favoriten.<br />
             <ul>
                 <li>Wählen Sie links aus dem Menü Ihre Favoriten aus - oder wieder ab.</li>
@@ -43,7 +43,7 @@
                     <a href="#" class="btn green margin-left-10" onclick="return AppFavoritesEditSwitch();"><i class="icon-ok"></i></a>
                 </li>
             </ul>
-        </span>
+        </div>
     </div>
 }
     
