Extended Flotr2 chart library with "labels inside bars" to show y-data inside bars

--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/ChartJsonDataCustomizingScripts.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/ChartJsonDataCustomizingScripts.cshtml
@@ -67,8 +67,9 @@
 
     function ZulassungShoppingCart(widgetKey) {
 
+        _chartOptions.bars.showBarLabelsInside = true;
         _chartOptions.colors = ["#BB0000", "#00BB00", "#0000BB"];
-        console.log(_chartOptions);
+
     }
 
     function ZBIIEinAusgaenge(widgetKey) {
