--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/ChartJsonDataCustomizingScripts.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/ChartJsonDataCustomizingScripts.cshtml
@@ -67,8 +67,15 @@
 
     function ZulassungShoppingCart(widgetKey) {
 
+        _chartOptions.grid.horizontalLines = false;
         _chartOptions.bars.showBarLabelsInside = true;
         _chartOptions.colors = ["#BB0000", "#00BB00", "#0000BB"];
+
+    }
+
+    function ZulassungenWithBarLabelsInside(widgetKey) {
+
+        _chartOptions.bars.showBarLabelsInside = true;
 
     }
 
