Flotr2 chart library: Pie chart, support for label "threshold", etc

--- a/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/ChartJsonDataCustomizingScripts.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Areas/Common/Views/Dashboard/Partial/ChartJsonDataCustomizingScripts.cshtml
@@ -79,6 +79,13 @@
 
     }
 
+    function ZulassungenProMaterialLetzte30TagePie(widgetKey) {
+
+        _chartOptions.legend.position = 'sw';
+        _chartOptions.PieLabelValueThreshold = 1.5;
+
+    }
+
     function ZBIIEinAusgaenge(widgetKey) {
 
         var colors = [];
