--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/AppFavoriteButtons.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/AppFavoriteButtons.cshtml
@@ -4,14 +4,39 @@
     bool isDashBoard = ViewBag.IsDashboard ?? false;
 }
 
+<style type="text/css">
+    h4.favorites-header {
+        margin-top: 30px;
+        margin-bottom: 25px;
+    }
+</style>
+
 @if (isDashBoard)
 {
     <style type="text/css">
-        
+    h4.favorites-header {
+        font-size: 1.0em;
+        margin: 0 5px 12px 0!important; 
+    }
+    a.app-favorite-on-homepage-command {
+        padding-top: 4px !important;
+    }
+    a.app-favorite-on-homepage {
+        font-size: 0.85em;
+        width: 150px!important;
+        margin: 0 5px 8px 0!important; 
+    }
+    .app-favorite-on-homepage-edit-mode-hint {
+        font-size: 0.85em!important;
+        height: 110px !important;
+    }
+    .app-favorite-on-homepage-edit-mode-hint ul li {
+        height: auto !important;
+    }
     </style>
 }
 
-<h4 class="margin-top-30 margin-bottom-25">
+<h4 class="favorites-header">
         
     @Localize.YourFavorites
         
