--- a/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/UserMessages.cshtml
+++ b/inetpub/wwwroot/ServicesMvc/Views/Shared/AppFavorites/UserMessages.cshtml
@@ -13,6 +13,22 @@
         .alert-block {
             padding: 3px !important;
         }
+        h5.user-messages-title {
+                    margin: 0 0 8px 0 !important;
+                    font-size: 0.9em;
+            display: none;
+        }
+        h4.alert-heading {
+            font-size: 0.9em;
+        }
+        p {
+            font-size: 0.80em;
+            line-height: 14px;
+            padding-bottom: 3px;
+        }
+        p br {
+            display: none;
+        }
     </style>
 }
 
